--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -74,13 +74,20 @@
                 android:textColor="#353535"
                 android:textSize="16sp" />
         </RelativeLayout>
-
+        <CheckBox
+            android:layout_marginTop="5dp"
+            android:layout_gravity="right"
+            android:id="@+id/cb_ischeck"
+            android:textColor="@color/black"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="记住密码" />
         <Button
             android:id="@+id/btn_login"
             android:onClick="click_login"
             android:layout_width="match_parent"
             android:layout_height="45dp"
-            android:layout_marginTop="40dp"
+            android:layout_marginTop="10dp"
             android:background="@drawable/btn_enable_green"
             android:enabled="false"
             android:paddingBottom="7dp"
