--- a/app/src/main/res/layout/item_table_first.xml
+++ b/app/src/main/res/layout/item_table_first.xml
@@ -11,7 +11,8 @@
         android:layout_height="match_parent"
         android:layout_weight="1"
         android:gravity="center_vertical|left"
-        android:paddingLeft="10dip" />
+        android:paddingLeft="10dip"
+        android:maxLines="1" />
 
     <View
         android:layout_width="1.5dip"
