--- a/app/src/main/res/drawable/actions_item_selector.xml
+++ b/app/src/main/res/drawable/actions_item_selector.xml
@@ -1,8 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <item android:drawable="@drawable/actions_item_bg_s" android:state_focused="true"></item>
-    <item android:drawable="@drawable/actions_item_bg_s" android:state_pressed="true"></item>
-    <item><shape ><solid android:color="@color/white"/></shape></item>
+    <item android:state_pressed="true"><shape android:shape="rectangle">
+        <stroke android:width="1.0px" android:color="@color/line" />
+
+        <gradient android:angle="270.0" android:endColor="#ffe8ecef" android:startColor="#ffe8ecef" />
+    </shape></item>
+    <item android:state_focused="true"><shape android:shape="rectangle">
+        <gradient android:angle="270.0" android:endColor="#ffe8ecef" android:startColor="#ffe8ecef" />
+
+        <stroke android:width="1.0px" android:color="@color/line" />
+    </shape></item>
+    <item><shape android:shape="rectangle">
+        <gradient android:angle="270.0" android:endColor="#ffffffff" android:startColor="#ffffffff" />
+        <!-- 课堂栏分界线
+        <stroke android:width="1.0px" android:color="@color/line" />
+        -->
+    </shape></item>
 
 </selector>
