课堂栏 更换图片 查成绩界面 科目后加省略号

--- a/app/src/main/res/layout/item_table_first.xml
+++ b/app/src/main/res/layout/item_table_first.xml
@@ -12,6 +12,7 @@
         android:layout_weight="1"
         android:gravity="center_vertical|left"
         android:paddingLeft="10dip"
+        android:ellipsize="end"
         android:maxLines="1" />
 
     <View
